Fix z-indexes (#1680)

--- a/source/stylesheets/components/_intercom-launcher.scss
+++ b/source/stylesheets/components/_intercom-launcher.scss
@@ -1,4 +1,4 @@
 #intercom-container {
   position: absolute !important;
-  z-index: 1 !important;
+  z-index: 4 !important;
 }
